--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <button class="operator del">DEL</button>
                 <button class="operator">%</button>
                 <button class="operator">/</button>
+                
             </div>
             <div>
                 <button>7</button>
@@ -28,7 +29,14 @@
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                <button class="equalBtn">=</button>
+                <button class="operator">+</button>
+            </div>
+            <div>
+                <button>+/-</button>
+                <button>0</button>
+                <button>.</button>
+                <button class="equalbtn">=</button>
+
             </div>
         </div>
         <script src="script.js"></script>
